<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".themeSelection">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="241dp"
        android:layout_height="67dp"
        android:fontFamily="@font/benchnine_light"
        android:text="@string/title4Theme"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/button3"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/benchnine_light"
        android:text="@string/Topic1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/benchnine_light"
        android:text="@string/TOPIC2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/benchnine_light"
        android:text="@string/TOPIC3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/benchnine_light"
        android:text="@string/TOPIC4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginTop="364dp"
        android:fontFamily="@font/benchnine_light"
        android:text="@string/topicRANDOM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>